# mambot

./: .gitignore  pyproject.toml
src/: __main__.py  app.py  config.py  const.py  initialization.py  keyboards.py
src/blueprints/: __init__.py
src/blueprints/commands/: __init__.py  start.py
src/blueprints/updates/: __init__.py  contact_by_phone.py  info.py  menu.py
src/database/: data.py  user.py
src/middlewares/: __init__.py  registration.py
